
***Preparing for Krypton***

- [MODIFIED] addon.xml: Updated GUI to 5.12.0
- [RENAMED] dialogKaiToast -> dialogNotification.xml
- [NEW] DialogConfirm.xml
- [REMOVED] DialogOK.xml
- [REMOVED] DialogProgress.xml
- [REMOVED] DialogYesNo.xml
- [NEW] DialogSettings.xml
- [REMOVED] DialogAudioDSPSettings.xml
- [REMOVED] DialogContentSettings.xml
- [REMOVED] DialogMediaFilter.xml
- [REMOVED] DialogNetworkSetup.xml
- [REMOVED] DialogPeripheralSettings.xml
- [REMOVED] DialogPVRTimerSettings.xml
- [REMOVED] LockSettings.xml
- [REMOVED] ProfileSettings.xml
- [REMOVED] VideoOSDSettings.xml
- [REMOVED] DialogMuteBug.xml

[B]1.0.0[/B]

- Kodi Jarvis Release


[B]0.9.1[/B]

***Bug squashing***

- [FIX] Numeric keyboard entry
- [FIX] Typo in recent albums playlist (thanks PaulVT)
- [FIX] Filename casing error (thanks PaulVT)
- [FIX] Notifications now autoscroll


[B]0.9.0[/B]

***Working towards Kodi Jarvis release***

- [REMOVED DEPENDENCY] script.thedeadman.functions (Nice one team Kodi!)
- [REMOVED DEPENDENCY] script.globalsearch
- [REMOVED DEPENDENCY] script.artistslideshow
- [REMOVED] DialogPeripheralManager.xml
- [REMOVED] DialogKaraokeSongSelector.xml
- [REMOVED] DialogKaraokeSongSelectorLarge.xml
- [REMOVED] MusicKaraokeLyrics.xml
- [REMOVED] References to "allowoverlay" tag
- [REMOVED] mymusicsongs.xml
- [REMOVED] videooverlay.xml
- [REMOVED] musicoverlay.xml
- [NEW] custom_musicOverlay.xml
- [REMOVED] References to "zorder" tag
- [NEW] DialogPVRInfo.xml
- [REMOVED] DialogPVRGuideInfo.xml
- [REMOVED] DialogPVRRecordingInfo.xml
- [REMOVED] VisualisationPresetList.xml
- [NEW] EventLog.xml
- [MODIFIED] dialogKeyboard.xml - additional labels for BaiduPy input added
- [NEW] DialogAudioDSPManager.xml
- [NEW] DialogAudioDSPSettings.xml
- [MODIFIED] DialogAddonInfo.xml - remove button id="11"
- [MODIFIED] DialogKaiToast.xml - remove ID's 403-405
- [MODIFIED] DialogVideoInfo.xml - add button ID 7, replace user rating value
- [MODIFIED] MyMusicNav.xml - remove files node button


