@@ -81,18 +81,18 @@
                     </control>
                 </focusedlayout>
                 <content>
-					<item id="13">
-		                <visible>System.HasMediaDVD</visible>
-		                <label>341</label>
-		                <label2/>
-		                <onclick>XBMC.PlayDVD()</onclick>
-		            </item>
-		            <item id="14">
-		                <visible>System.HasMediaDVD</visible>
-		                <label>31135</label>
-		                <label2/>
-		                <onclick>EjectTray()</onclick>
-		            </item>
+                    <item id="13">
+                        <visible>System.HasMediaDVD</visible>
+                        <label>341</label>
+                        <label2/>
+                        <onclick>XBMC.PlayDVD()</onclick>
+                    </item>
+                    <item id="14">
+                        <visible>System.HasMediaDVD</visible>
+                        <label>31135</label>
+                        <label2/>
+                        <onclick>EjectTray()</onclick>
+                    </item>
                     <item id="10">
                         <visible>System.GetBool(pvrmanager.enabled)</visible>
                         <label>31006</label>
@@ -163,12 +163,6 @@
                         <label2></label2>
                         <thumb>-</thumb>
                         <onclick>ActivateWindow(settings)</onclick>
-                    </item>
-                    <item id="11">
-                        <label>31007</label>
-                        <label2></label2>
-                        <thumb>-</thumb>
-                        <onclick>ActivateWindow(systeminfo)</onclick>
                     </item>
                     <item id="8">
                         <label>31004</label>
