@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
     <defaultcontrol always="true">9000</defaultcontrol>
-
     <controls>
         <!--background-->
         <include>globalBackground</include>
@@ -134,88 +133,89 @@
                     </control>
                 </focusedlayout>
                 <content>
-                    <item id="1">
-                        <description>Appearance</description>
-                        <label>480</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[31061] • $LOCALIZE[24008]</property>
-                        <onclick>activatewindow(AppearanceSettings)</onclick>
-                    </item>
-                    <item id="2">
-                        <description>Videos</description>
-                        <label>3</label>
+                    <item>
+                        <description>Player Settings</description>
+                        <label>$LOCALIZE[14201]</label>
                         <label2></label2>
                         <property name="label3">$LOCALIZE[31063] • $LOCALIZE[24012]</property>
-                        <onclick>activatewindow(VideosSettings)</onclick>
+                        <onclick>activatewindow(PlayerSettings)</onclick>
                     </item>
-                    <item id="9">
-                        <label>$LOCALIZE[31060]</label>
+                    <item>
+                        <description>Library Settings</description>
+                        <label>$LOCALIZE[14203]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[31063] • $LOCALIZE[24012]</property>
+                        <onclick>activatewindow(LibrarySettings)</onclick>
+                    </item>
+                    <item>
+                        <description>PVR Settings</description>
+                        <label>$LOCALIZE[14205]</label>
                         <label2></label2>
                         <property name="label3">$LOCALIZE[31006] • $LOCALIZE[31065]</property>
                         <onclick>ActivateWindow(PVRSettings)</onclick>
                     </item>
-                    <item id="3">
-                        <description>Music</description>
-                        <label>2</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[31063] • $LOCALIZE[31066]</property>
-                        <onclick>activatewindow(MusicSettings)</onclick>
+                    <item>
+                        <description>Services Settings</description>
+                        <label>$LOCALIZE[14208]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[31071] • $LOCALIZE[1273]</property>
+                        <onclick>activatewindow(ServiceSettings)</onclick>
                     </item>
-                    <item id="4">
+                    <item>
+                        <description>Interface settings</description>
+                        <label>$LOCALIZE[14207]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[31061] • $LOCALIZE[24008]</property>
+                        <onclick>activatewindow(InterfaceSettings)</onclick>
+                    </item>
+                    <item>
+                        <description>Skin settings</description>
+                        <label>$LOCALIZE[20077]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[31061] • $LOCALIZE[24008]</property>
+                        <onclick>activatewindow(SkinSettings)</onclick>
+                    </item>
+                    <item>
+                        <description>Profiles</description>
+                        <label>$LOCALIZE[14210]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[31105] • $LOCALIZE[31106]</property>
+                        <onclick>activatewindow(Profiles)</onclick>
+                    </item>
+                    <item>
+                        <description>System</description>
+                        <label>$LOCALIZE[14209]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[14094] • $LOCALIZE[14095]</property>
+                        <onclick>activatewindow(SystemSettings)</onclick>
+                    </item>
+                    <item>
                         <description>Addons</description>
                         <label>24001</label>
                         <label2></label2>
                         <property name="label3">$LOCALIZE[31067]</property>
                         <onclick>activatewindow(AddonBrowser)</onclick>
                     </item>
-                    <item id="5">
-                        <description>Pictures</description>
-                        <label>1</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[31063] • $LOCALIZE[31068]</property>
-                        <onclick>activatewindow(PicturesSettings)</onclick>
-                    </item>
-                    <item id="6">
-                        <description>Weather</description>
-                        <label>8</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[31069] • $LOCALIZE[14036]</property>
-                        <onclick>activatewindow(WeatherSettings)</onclick>
-                    </item>
-                    <item id="7">
-                        <description>Services</description>
-                        <label>14036</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[31071] • $LOCALIZE[1273]</property>
-                        <onclick>activatewindow(ServiceSettings)</onclick>
-                    </item>
-                    <item id="8">
-                        <description>System</description>
-                        <label>13000</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[14094] • $LOCALIZE[14095]</property>
-                        <onclick>activatewindow(SystemSettings)</onclick>
-                    </item>
-                    <item id="9">
-                        <description>Profiles</description>
-                        <label>13200</label>
-                        <label2></label2>
-                        <property name="label3">$LOCALIZE[31105] • $LOCALIZE[31106]</property>
-                        <onclick>activatewindow(34)</onclick>
-                    </item>
-                    <item id="10">
+                    <item>
                         <description>File Manager</description>
                         <label>10003</label>
                         <label2></label2>
                         <property name="label3">$LOCALIZE[31095] • $LOCALIZE[31111]</property>
-                        <onclick>activatewindow(3)</onclick>
+                        <onclick>activatewindow(1103)</onclick>
                     </item>
-                    <item id="11">
+                    <item>
                         <description>Programs</description>
                         <label>31003</label>
                         <label2></label2>
                         <property name="label3">$LOCALIZE[31067]</property>
                         <onclick>ActivateWindow(programs,addons,return)</onclick>
+                    </item>
+                    <item>
+                        <description>System Info</description>
+                        <label>$LOCALIZE[138]</label>
+                        <label2></label2>
+                        <property name="label3">$LOCALIZE[31067]</property>
+                        <onclick>ActivateWindow(systeminfo)</onclick>
                     </item>
                 </content>
             </control>
